2004-12-31 08:22 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.h: Added GormFilesOwner to @class declaration.
	* Gorm.m: Made rect drawn around objects thinner to prevent
	residual lines from remaining when the rect is erased.
	* Palettes/1Windows/main.m: Simplified includes.

2004-12-28 21:21 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormImageEditor.m: Added check to see if object responds
	to setImage: in performDragOperation.
	* GormImage.m: Moved NSImage category dec/def here.
	* GormPrivate.h: Removed NSImage category declaration.
	* GormViewEditor.m: Removed NSImage category definition.

2004-12-28 16:38 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormPalettesManager.m: Enhancment in loadPalette: to allow
	loading using either the plist or the strings format for 
	palette.table.

2004-12-28 12:10 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/1Windows/GormNSPanel.m
	* Palettes/1Windows/GormNSWindow.m: Initialize the miniaturized
	window image to nil.

2004-12-28 08:38 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/0Menus/GormMenuEditor.m: Improvement on previous
	correction.

2004-12-27 22:02 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/0Menus/GormMenuEditor.m: Correction for Bug#11410.

2004-12-27 21:39 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormLib/IBObjectAdditions.m: Changed some implementations.
	* GormObjectEditor.m: Removed methods which it was unecessary
	to override.

2004-12-27 21:21 Gregory John Casamento <greg_casamento@yahoo.com>

	* GModelDecoder.m: 
	* GormDocument.m: Change to properly handle exception when
	a class fails to parse.
	* Gorm.m: Correction for Bug#11415 and also made a changed to
	discontinue connection when a cut/paste/copy operation is done.
	* GormObjectEditor.m: Correction for Bug#11415.
	* Palettes/0Menus/GormMenuEditor.m: Correction for Bug#11412. 
	
2004-12-23 14:52 Gregory John Casamento <greg_casamento@yahoo.com>
