@@ -2,23 +2,7 @@
     "## Comment" = "Do NOT change this file, Gorm maintains it";
     FirstResponder = {
 	Actions = (
-	    "capitalizeWord:",
-	    "changeFont:",
-	    "delete:",
-	    "deleteWordBackward:",
-	    "loosenKerning:",
-	    "moveDown:",
-	    "moveToBeginningOfParagraph:",
-	    "moveWordForward:",
-	    "orderFrontDataLinkPanel:",
-	    "pasteAsPlainText:",
-	    "raiseBaseline:",
-	    "scrollLineDown:",
-	    "selectParagraph:",
-	    "showWindow:",
-	    "takeObjectValueFrom:",
-	    "toggleTraditionalCharacterShape:",
-	    "unscript:"
+	    "changeFont:"
 	);
 	Super = NSObject;
     };
@@ -29,7 +13,9 @@
 	    backingMatrix,
 	    controlMatrix,
 	    optionMatrix,
-	    titleForm
+	    titleForm,
+	    iconNameForm,
+	    clearButton
 	);
 	Super = IBInspector;
     };
