@@ -1,3 +1,10 @@
+2004-12-31 14:29 Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* Palettes/1Windows/GormNSWindowInspector.gorm: Added form
+	to allow setting of the miniaturized image by name.
+	* Palettes/1Windows/main.m: Changes to use the form added to the
+	UI.
+
 2004-12-31 08:22 Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* GormDocument.h: Added GormFilesOwner to @class declaration.
